<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>org.ognl</groupId>
    <artifactId>ognl</artifactId>
    <packaging>jar</packaging>
    <version>3.4.0-SNAPSHOT</version>
    <name>OGNL - Object Graph Navigation Library</name>
    <description>OGNL - Object Graph Navigation Library</description>

    <inceptionYear>1997</inceptionYear>

    <url>https://github.com/jkuhnert/ognl/</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:jkuhnert/ognl.git</connection>
        <url>git@github.com:jkuhnert/ognl.git</url>
        <developerConnection>scm:git:git@github.com:jkuhnert/ognl.git</developerConnection>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/jkuhnert/ognl/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>lukaszlenart</id>
            <email>lukaszlenart@apache.org</email>
            <roles>
                <role>ASF Committer</role>
            </roles>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>4.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.0-GA</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
                <executions>
                    <execution>
                        <id>compile-tests</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <source>1.8</source>
                            <target>1.8</target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/TestOgnlRuntime.java</include>
                        <include>**/TestOgnlException.java</include>
                        <include>**/TestExpressionCompiler.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                        <manifestEntries>
                            <Automatic-Module-Name>ognl</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                    </archive>
                    <source>1.8</source>
                    <sourceFileExcludes>
                        <fileExclude>**/target/generated-sources/**/*.java</fileExclude>
                    </sourceFileExcludes>
                    <links>
                        <link>https://docs.oracle.com/javase/8/docs/api/</link>
                    </links>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javacc-maven-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>ognl-jjtree</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <outputDirectory>${project.build.directory}/generated-sources/java</outputDirectory>
                            <packageName>org.ognl</packageName>
                            <!-- Uncomment if AST files needs to be generated
                            <nodePackage>*.jtree</nodePackage>
                             -->
                            <!-- Uncomment if visitor default implementation needs to be generated
                            <visitor>true</visitor>
                            -->
                        </configuration>
                        <goals>
                            <!-- change goal to jtree-javacc to generate AST too -->
                            <goal>javacc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <defaultGoal>install</defaultGoal>

    </build>

    <profiles>
        <profile>
            <id>jdk17</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <argLine>
                                    --illegal-access=permit
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                    --add-opens java.base/java.util=ALL-UNNAMED
                                    -Dillegal-access=permit
                                </argLine>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
